--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "omit.js": "^1.0.2",
     "path-to-regexp": "^3.0.0",
     "qs": "^6.8.0",
+    "rc-color-picker": "^1.2.6",
     "react": "^16.8.6",
     "react-amap": "^1.2.8",
     "react-copy-to-clipboard": "^5.0.1",
